--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="./App.js"></script>
     </head>
     <body>
+	<!-- The important bit is here -->
 	<a href='https://redcapedc.rti.org/fhir/ehr.php'>
 	     <span class="icon">Open REDCap</span>
 	</a>
