--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Static Template</title>
-        <link rel="stylesheet" href="../style.css">
-        <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-        <script src="./App.js"></script>
-    </head>
-    <body>
-	<!-- The important bit is here -->
-	<a href='https://redcapedc.rti.org/fhir/ehr.php'>
-	     <span class="icon">Open REDCap</span>
-	</a>
-        <div class="cell top-left">
-            <h4>Current Patient</h4>
-            <pre id="patient"></pre>
-        </div>
-        <div class="cell top-center">
-            <h4>Current User</h4>
-            <pre id="user"></pre>
-        </div>
-        <div class="cell top-right">
-            <h4>Current Encounter</h4>
-            <pre id="encounter"></pre>
-        </div>
-        <div class="cell bottom">
-            <h4>Main Output</h4>
-            <pre id="output">Loading...</pre>
-        </div>
-        <script type="text/javascript">
-            FHIR.oauth2.ready().then(function(client) {
-                var app = new App(client);
-                App.prototype.setLabel("output", "Conformance Statement");
-                app.renderContext();
-                app.request("metadata");
-            }).catch(createRenderer("output"));
-        </script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
+    <link rel="stylesheet" href="../styles.css" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
+    <script src="./App.js"></script>
+  </head>
+  <body>
+    <!-- The important bit is here -->
+    <a href="https://redcapedc.rti.org/fhir/ehr.php">
+      <button type="button" class="btn btn-danger">Authorize REDCap</button>
+    </a>
+    <div class="cell top-left">
+      <h4>Current Patient</h4>
+      <pre id="patient"></pre>
+    </div>
+    <div class="cell top-center">
+      <h4>Current User</h4>
+      <pre id="user"></pre>
+    </div>
+    <div class="cell top-right">
+      <h4>Current Encounter</h4>
+      <pre id="encounter"></pre>
+    </div>
+    <div class="cell bottom">
+      <h4>Main Output</h4>
+      <pre id="output">Loading...</pre>
+    </div>
+    <script type="text/javascript">
+      FHIR.oauth2
+        .ready()
+        .then(function (client) {
+          var app = new App(client);
+          App.prototype.setLabel("output", "Conformance Statement");
+          app.renderContext();
+          app.request("metadata");
+        })
+        .catch(createRenderer("output"));
+    </script>
+  </body>
 </html>
-
