--- a/index.html
+++ b/index.html
@@ -21,21 +21,25 @@
     <a href="https://redcapedc.rti.org/fhir/ehr.php">
       <button type="button" class="btn btn-danger">Authorize REDCap</button>
     </a>
-    <div class="cell top-left">
-      <h4>Current Patient</h4>
-      <pre id="patient"></pre>
-    </div>
-    <div class="cell top-center">
-      <h4>Current User</h4>
-      <pre id="user"></pre>
-    </div>
-    <div class="cell top-right">
-      <h4>Current Encounter</h4>
-      <pre id="encounter"></pre>
-    </div>
-    <div class="cell bottom">
-      <h4>Main Output</h4>
-      <pre id="output">Loading...</pre>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h4>Current Patient</h4>
+                <pre id="patient"></pre>
+            </div>
+            <div class="col">
+                <h4>Current User</h4>
+                <pre id="user"></pre>
+            </div>
+            <div class="col">
+                <h4>Current Encounter</h4>
+                <pre id="encounter"></pre>
+            </div>
+        </div>
+        <div class="row">
+            <h4>Main Output</h4>
+            <pre id="output">Loading...</pre>
+        </div>
     </div>
     <script type="text/javascript">
       FHIR.oauth2
