--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <h4>Current User</h4>
                 <pre id="user"></pre>
             </div>
-        -->
+        
             <div class="col">
                 <h4>Current Encounter</h4>
                 <pre id="encounter"></pre>
-            </div>
+            </div>-->
         </div>
         <div class="row">
             <h4>Main Output</h4>
